# NLP_projet

./: README.md
.devcontainer/: devcontainer.json
src/backend/: .gitignore  ai_logic.py  app.py  main.py  pyproject.toml
src/backend/results/2026.01.12-18.11.03/: full_video_analysis.txt  inference_results.json  inference_results.md  inference_results.txt
src/backend/streaming/: CutScenes.py  RegisterStream.py  VideoStream.py  inference_multi.py
